hphp/test/slow/error_handler/hphp-throw-fatal-error.php.expectf
Fatal error: This is a fatal error in %s/hphp-throw-fatal-error.php on line 5
